[tool.poetry]
name = "schedule_state"
version = "0.19.2"
description = ""
authors = ["Aneesh Dalvi <2533133+aneeshd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
portion = "==2.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^7.0.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
coverage = "^7.3.2"
codespell = "^2.2.6"
pytest-asyncio = "^0.21.0"
black = "^23.12.1"
homeassistant = "^2024.1.3"
pytest-homeassistant-custom-component = "^0.13.80"
holidays = "0.41"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

# see:
#   https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/discussions/160
[tool.pytest.ini_options]
asyncio_mode = "auto"
