[tool.poetry]
name = "schedule_state"
version = "0.19.2"
description = ""
authors = ["Aneesh Dalvi <2533133+aneeshd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
portion = "==2.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
coverage = "^7.3.2"
codespell = "^2.3.0"
pytest-asyncio = "^0.23.4"
black = "^24.4.2"
homeassistant = "^2024.9.1"
pytest-homeassistant-custom-component = "^0.13.152"
holidays = "0.60"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

# see:
#   https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/discussions/160
[tool.pytest.ini_options]
asyncio_mode = "auto"
